laboratorio-nodejs-github-actions/kubernetes-manifests/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs
  labels:
    name: nodejs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nodejs
  name: nodejs
  labels:
    app: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs
        image: ghcr.io/crcasiswho/demostration-nodejs-application:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: nodejs
  name: nodejs
spec:
  selector:
    app: nodejs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
